@@ -1,4 +1,6 @@
 2.6.0 - "Usability"
+	* Changed library requirements:
+	  - FFmpeg/LibAV: raised minimum requirement to release 0.7
 	* Removed functionality:
 	  - Transitional code from the previous release
 	  - autogen.sh in favour of autoreconf(1)
